[package]
name = "cuprite"
version = "0.1.1"
edition = "2021"
authors = ["tropicbliss <tropicbliss@protonmail.com>"]
description = "A fast and simple to use Minecraft server backup daemon"
license = "MIT"
homepage = "https://github.com/tropicbliss/cuprite"
documentation = "https://github.com/tropicbliss/cuprite"
repository = "https://github.com/tropicbliss/cuprite"
keywords = ["minecraft", "backup", "rcon", "minecraft-server", "minecraft-backup"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
async-std = { version = "1.10.0", features = ["attributes"] }
chrono = "0.4.19"
flate2 = "1.0.22"
lazy_static = "1.4.0"
rcon = "0.5.2"
regex = "1.5.4"
structopt = "0.3.25"
tar = "0.4.37"
